# Style-Transfert-Webshop

./: .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  default.toml  docker-compose.yml  mypy.ini  pyproject.toml  user.toml
development/database/: Dockerfile  README.md  insertion.sql
docker/ai/: Dockerfile
docker/database/: Dockerfile  README.md  insertion.sql
docker/runpod/: Dockerfile
docker/webserver/: Dockerfile
documentation/: WSL_cuda.md
notebooks/: test_fastapi.ipynb
src/: __init__.py
src/app/: __init__.py  app.py  database.py
src/sts/: __main__.py
src/sts/app/: app.py  database.py  home.py
src/sts/app/pages/: __init__.py  my_account.py  order.py
src/sts/style_transfer/: version.py
src/sts/utils/: checkout_utils.py  streamlit_utils.py  utils.py
src/style_ai/: __main__.py  api.py  runpod_entry.py  style_transfer.py  utils.py
src/style_transfer/: __init__.py  server.py
src/utils/: utils.py
tests/: __init__.py
tests/utils/: utils.py
